--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	
     <application
         android:allowBackup="true"
