--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# built application files
+﻿# built application files
 *.apk
 *.ap_
 
@@ -18,3 +18,7 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+
+# Local server startup script
+/startLocalServer.bat
+/startLocalServer.sh
